# apex-files

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  railway.json  tailwind.config.js  vite.config.ts
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  deps.py  main.py  models.py  schemas.py  security.py  settings.py
backend/app/routers/: auth.py  builds.py  integrations.py  projects.py  subscription.py
backend/app/services/: bootstrap.py  build_pipeline.py  revtech_client.py
docs/: RAILWAY_SETUP.md
electron/: main.cjs  preload.cjs
scripts/: railway-build.cjs  railway-start.cjs  static-server.cjs
src/: App.tsx  index.css  vite-env.d.ts
src/lib/: api.ts
