[project]
name = "apex-files-backend"
version = "0.1.0"
description = "Standalone Apex Files backend with optional Revtech service integration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[tool.uvicorn]
factory = false
